--- a/app/src/main/res/layout/layout_putrequest.xml
+++ b/app/src/main/res/layout/layout_putrequest.xml
@@ -2,58 +2,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:background="@drawable/zhijiao"
         android:layout_marginTop="20dp">
         <EditText
-            android:layout_width="320dp"
+            android:id="@+id/EtPutrequestRuid"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/yuanjiao"
+            android:background="@drawable/zhijiao"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:hint="联系方式："
+            android:paddingLeft="5dp"
+            android:hint="发布人id"
             android:gravity="top"/>
-        <LinearLayout
-            android:layout_width="320dp"
-            android:layout_height="100dp"
-            android:orientation="vertical"
-            android:background="@drawable/yuanjiao"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+
             <EditText
+                android:id="@+id/EtPutrequestContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:minLines="6"
+                android:maxLines="8"
+                android:scrollbars="vertical"
                 android:hint="发布需求："
-                android:background="@null"
+                android:background="@drawable/zhijiao"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
                 android:layout_marginTop="10dp"
                 android:gravity="top"
                 android:layout_gravity="top"/>
-        </LinearLayout>
-        <Button
-            android:id="@+id/btn"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/yuanjiao"
-            android:text="点击这里登记时间呦"/>
-        <EditText
-            android:id="@+id/edtext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/edtext"
+                android:hint="发布时间"
+                android:layout_alignParentLeft="true"
+                android:layout_width="200dp"
+                android:paddingLeft="5dp"
+                android:background="@drawable/yuanjiao"
+                android:layout_height="50dp" />
+            <Button
+                android:id="@+id/btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/yuanjiao"
+                android:text="获取"/>
+
+        </RelativeLayout>
+
     </LinearLayout>
+
     <Button
+        android:id="@+id/btn_publish"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:text="发布"
-        android:id="@+id/btn_publish"
         android:background="@drawable/yuanjiao"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
