--- a/app/src/main/res/layout/activity_zhuce.xml
+++ b/app/src/main/res/layout/activity_zhuce.xml
@@ -96,6 +96,15 @@
             android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:id="@+id/btn_ok"/>
+        <Button
+            android:layout_width="330dp"
+            android:layout_height="30dp"
+            android:background="@drawable/zhijiao"
+            android:text="分享"
+            android:textSize="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
+            android:id="@+id/btn_fx"/>
 
     </LinearLayout>
 
