--- a/app/src/main/res/layout/top_menu_back.xml
+++ b/app/src/main/res/layout/top_menu_back.xml
@@ -28,13 +28,11 @@
             android:textColor="#000000"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/iv_refresh"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/btn_fx"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="8dp"
-            />
+            android:background="@drawable/fenxiang"/>
     </LinearLayout>
 
 </RelativeLayout>
