添加返回按钮

--- a/app/src/main/res/layout/activity_takephoto.xml
+++ b/app/src/main/res/layout/activity_takephoto.xml
@@ -7,6 +7,19 @@
     tools:context="com.example.administrator.missphoto.TakephotoActivity"
     android:background="#fff">
 
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_back"
+            android:background="#fff"
+            android:id="@+id/btn_back1"/>
+
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
