--- a/app/src/main/res/layout/top_menu_back.xml
+++ b/app/src/main/res/layout/top_menu_back.xml
@@ -31,8 +31,7 @@
         <Button
             android:id="@+id/btn_fx"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/fenxiang"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </RelativeLayout>
