--- a/app/src/main/res/layout/activity_takephoto.xml
+++ b/app/src/main/res/layout/activity_takephoto.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.administrator.missphoto.TakephotoActivity"
-    android:background="#fff">
+    android:background="#fff"
+    >
 
     <LinearLayout
 
