--- a/app/src/main/res/layout/activity_zhuce.xml
+++ b/app/src/main/res/layout/activity_zhuce.xml
@@ -95,23 +95,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:text="登录"
                 android:textSize="20dp"
                 android:textColor="#ffffff"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="25dp"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/btn_back1"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="分享"
-                android:textSize="20dp"
-                android:textColor="#ffffff"
-                android:id="@+id/btn_fx"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="165dp"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
