--- a/app/src/main/res/layout/personnal_message.xml
+++ b/app/src/main/res/layout/personnal_message.xml
@@ -73,4 +73,13 @@
         android:id="@+id/personal_fenxiang"
         android:layout_gravity="center"
         android:gravity="center"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="退出当前账号"
+        android:textSize="20dp"
+        android:id="@+id/personal_tuichu"
+        android:layout_gravity="center"
+        android:gravity="center"/>
 </LinearLayout>
